Replacing Entwine functional bits with Java functional bits